# MAI_dpp_recsys_mvp

./: README.md
docker/: docker-compose.yaml
docker/recommendations_system_t2s/: Dockerfile
sources/: CMakeLists.txt
sources/cmake/: log_instruments.cmake
sources/recommendation_system_t2s/: CMakeLists.txt  main.cpp
sources/recommendation_system_t2s/service/assets/: server_config.json
sources/recommendation_system_t2s/service/common/: bool_setting.hpp  education_course.hpp  education_level.hpp  errors.cpp  errors.hpp  id.hpp  institute_id.hpp  int_setting.hpp  string_setting.hpp
sources/recommendation_system_t2s/service/config/: config_builder.hpp  path_validate.cpp  path_validate.hpp  server_config.cpp  server_config.hpp
sources/recommendation_system_t2s/service/database/: database.cpp  database.hpp  database_status.hpp  recsys_database.cpp  recsys_database.hpp  student.cpp  student.hpp  student_indexer.cpp  student_indexer.hpp  team.cpp  team.hpp
sources/recommendation_system_t2s/service/database/common/: database_status.hpp  descriptor.cpp  descriptor.hpp  object_constructor.hpp  optional_with_status.hpp
sources/recommendation_system_t2s/service/handlers/include/handlers/: handler_factory.hpp  handler_type.hpp  i_request_handler.hpp  request_handler_factory.hpp
sources/recommendation_system_t2s/service/handlers/sources/: handler_factory.cpp  request_handler_factory.cpp
sources/recommendation_system_t2s/service/handlers/sources/base_handler/: base_request_handler.cpp  base_request_handler.hpp
sources/recommendation_system_t2s/service/handlers/sources/html_form/: html_form.cpp  html_form.hpp
sources/recommendation_system_t2s/service/handlers/sources/student_handler/: student_request_handler.cpp  student_request_handler.hpp
sources/recommendation_system_t2s/service/handlers/sources/team_handler/: team_request_handler.cpp  team_request_handler.hpp
sources/recommendation_system_t2s/service/http_server/: http_server.cpp  http_server.hpp
sources/recommendation_system_t2s/tests/: CMakeLists.txt  students_post_test.cpp
sources/recommendation_system_t2s/tests/assets/: generate_regular_students.py  regular_students_data.json
sources/recommendation_system_t2s/tests/common/: education_level_test.cpp
sources/recommendation_system_t2s/tests/service_test/: students_post.py
